--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -4,6 +4,8 @@
   margin: 3rem auto 6rem;
   color: white;
   font-family: "Source Sans Pro",Helvetica,sans-serif;
+  background-color: Blue;
+  
 }
 
 .header {
